// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View snapshot test 1 1`] = `
<React.Fragment>
  <InjectIntl(Component)
    locale="en"
    questionsList={Array []}
    questionsLoading={false}
    translations={Object {}}
  />
  <UNDEFINED
    locale="en"
    questionsList={Array []}
    questionsLoading={false}
    translations={Object {}}
  />
</React.Fragment>
`;

exports[`View snapshot test 2 1`] = `
<React.Fragment>
  <InjectIntl(Component)
    locale="en"
    questionsList={
      Array [
        "cheburek",
      ]
    }
    questionsLoading={false}
    translations={Object {}}
  />
  <UNDEFINED
    locale="en"
    questionsList={
      Array [
        "cheburek",
      ]
    }
    questionsLoading={false}
    translations={Object {}}
  />
</React.Fragment>
`;

exports[`View snapshot test 3 1`] = `
<React.Fragment>
  <InjectIntl(Component)
    locale="en"
    questionsList={
      Array [
        "cheburek",
      ]
    }
    questionsLoading={true}
    translations={Object {}}
  />
  <UNDEFINED
    locale="en"
    questionsList={
      Array [
        "cheburek",
      ]
    }
    questionsLoading={true}
    translations={Object {}}
  />
  <UNDEFINED />
</React.Fragment>
`;
